--- a/portofolio/index.html
+++ b/portofolio/index.html
@@ -32,6 +32,7 @@
   </div>
   <script src="script/openWindow.js"></script>
   <script src="script/calculator.js"></script>
-  <script src="script/myComputer.js"></script>
+  <!-- <script src="script/myComputer.js"></script> -->
+  <script src="script/InternetExplorer.js"></script>
 </body>
 </html>
