--- a/wordle/index.html
+++ b/wordle/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/f865c48659.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="keyboard-style.css">
     <title>Wordle</title>
 </head>
 <body>
@@ -12,7 +14,43 @@
         <section id="input-grid">
 
         </section>
+        <section id="keyboard">
+            <button class="key" value="q">Q</button>
+            <button class="key" value="w">W</button>
+            <button class="key" value="e">E</button>
+            <button class="key" value="r">R</button>
+            <button class="key" value="t">T</button>
+            <button class="key" value="y">Y</button>
+            <button class="key" value="u">U</button>
+            <button class="key" value="i">I</button>
+            <button class="key" value="o">O</button>
+            <button class="key" value="p">P</button>
+
+            <button class="key" value="a">A</button>
+            <button class="key" value="s">S</button>
+            <button class="key" value="d">D</button>
+            <button class="key" value="f">F</button>
+            <button class="key" value="g">G</button>
+            <button class="key" value="h">H</button>
+            <button class="key" value="j">J</button>
+            <button class="key" value="k">K</button>
+            <button class="key" value="l">L</button>
+            <button class="key" value="ñ">Ñ</button>
+            <button class="key" value="Enter" id="send-btn"><i class="fa-solid fa-share"></i></button>
+
+            <button class="key" value="z">Z</button>
+            <button class="key" value="x">X</button>
+            <button class="key" value="c">C</button>
+            <button class="key" value="v">V</button>
+            <button class="key" value="b">B</button>
+            <button class="key" value="n">N</button>
+            <button class="key" value="m">M</button>
+            <button class="key" value="Backspace" id="delete-btn"><i class="fa-solid fa-delete-left"></i></button>
+
+            
+        </section>
     </main>
 </body>
 <script src="wordle.js"></script>
+<script src="keyboard.js"></script>
 </html>
