--- a/claudiavictor/index.html
+++ b/claudiavictor/index.html
@@ -18,7 +18,10 @@
         </div>
         <div class="img-container" id="photo-container">
             <img id="photo" src="" alt="">
-            <button id="btn-close-photo"><i class="fa-solid fa-x"></i></button>
+            <div class="btn-photo-container">
+                <button class="btn-photo" id="btn-close-photo"><i class="fa-solid fa-x"></i></button>
+                <button class="btn-photo" id="btn-next-photo"><i class="fa-solid fa-forward"></i></button>
+            </div>
         </div>
     </main>
 </body>
